--- a/views/app_dashboard_v2.html
+++ b/views/app_dashboard_v2.html
@@ -1,6 +1,6 @@
 <div class="hbox hbox-auto-xs hbox-auto-sm" ng-init="
-    app.settings.asideFolded = true; 
-    app.settings.asideDock = true;
+    app.settings.asideFolded = false; 
+    app.settings.asideDock = false;
   ">
   <!-- main -->
   <div class="col">
