--- a/views/blocks/nav.html
+++ b/views/blocks/nav.html
@@ -382,5 +382,16 @@
       <span translate="aside.nav.your_stuff.DOCUMENTS">Documents</span>
     </a>
   </li>
+
+  <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">          
+    <span translate="aside.nav.manager_nav.Manager_TITLE">Manager</span>
+  </li>  
+  <li>
+    <a ui-sref="management.users">
+      <i class="icon-user icon"></i>
+      <span translate="aside.nav.manager_nav.USER">Users</span>
+    </a>
+  </li>
 </ul>
+
 <!-- / list -->
