--- a/views/management_users.html
+++ b/views/management_users.html
@@ -46,103 +46,49 @@
     </div>
   </div>
   <!-- /column -->
-  <!-- column -->
-  <div class="col w-lg lter b-r">
-    <div class="vbox">
-      <div class="row-row">
-        <div class="cell scrollable hover">
-          <div class="cell-inner">
-            <div class="m-t-n-xxs">
-              <div class="list-group list-group-lg no-radius no-border no-bg m-b-none">
-                <a ng-repeat="item in people | orderBy:'name'" class="list-group-item m-l" ng-class="{'select m-l-none': item.selected }" ng-click="selectPeople(item)">
-                  <span class="block text-ellipsis m-l-n text-md" ng-class="{'m-l-none': item.selected }">
-                    {{ item.name }}
-                  </span>
-                </a>
-              </div>
-            </div>
-            <div class="text-center pos-abt w-full" style="top:50%;" ng-hide="people.length" translate="content.management.no_people">No People</div>
-          </div>
-        </div>
-      </div>
-      <div class="wrapper b-t text-center">
-        <a href class="btn btn-sm btn-default btn-addon" ng-click="createPerson()"><i class="fa fa-plus fa-fw m-r-xs"></i> New Contact</a>
-      </div>
-    </div>
-  </div>
-  <!-- /column -->
+
 
   <!-- column -->
   <div class="col bg-white-only">
     <div class="vbox">
-      <div class="wrapper-sm b-b">
-        <div class="m-t-n-xxs m-b-n-xxs m-l-xs">
-          <a class="btn btn-xs btn-default pull-right" ng-hide="!item" ng-click="deleteItem(item)"><i class="fa fa-times"></i></a>
-          <a class="btn btn-xs btn-default" ng-hide="item.editing" ng-click="editItem(item)">Edit</a>
-          <a class="btn btn-xs btn-default" ng-show="item.editing" ng-click="doneEditing(item)">Done</a>
-        </div>
-      </div>
       <div class="row-row">
         <div class="cell">
           <div class="cell-inner">
+
             <div class="wrapper-lg">
-              <div class="hbox h-auto m-b-lg">
-                <div class="col text-center w-sm">
-                  <div class="thumb-lg avatar inline">
-                    <img ng-src="{{item.avatar}}" ng-show="item.avatar">
-                  </div>
-                </div>
-                <div class="col v-middle h1 font-thin">
-                  <div ng-hide="item.editing">{{item.first}} {{item.last}}</div>
-                  <div ng-show="item.editing">
-                    <input type="text" placeholder="First" class="form-control w-auto input-lg m-b-n-xxs font-bold" ng-model="item.first" >
-                    <input type="text" placeholder="Last" class="form-control w-auto input-lg font-bold" ng-model="item.last" >
-                  </div>
-                </div>
-              </div>
-              <!-- fields -->
-              <div class="form-horizontal">
-                <div class="form-group m-b-sm" ng-hide="!item.mobile && !item.editing">
-                  <label class="col-sm-3 control-label">Mobile</label>
-                  <div class="col-sm-9">
-                    <p class="form-control-static" ng-hide="item.editing">{{item.mobile}}</p>
-                    <input type="text" class="form-control" ng-show="item.editing" ng-model="item.mobile" >
-                  </div>
-                </div>
-                <div class="form-group m-b-sm" ng-hide="!item.home && !item.editing">
-                  <label class="col-sm-3 control-label">Home</label>
-                  <div class="col-sm-9">
-                    <p class="form-control-static" ng-hide="item.editing">{{item.home}}</p>
-                    <input type="text" class="form-control" ng-show="item.editing" ng-model="item.home" >
-                  </div>
-                </div>
-                <div class="form-group m-b-sm" ng-hide="!item.work && !item.editing">
-                  <label class="col-sm-3 control-label">Work</label>
-                  <div class="col-sm-9">
-                    <p class="form-control-static" ng-hide="item.editing">{{item.work}}</p>
-                    <input type="text" class="form-control" ng-show="item.editing" ng-model="item.work" >
-                  </div>
-                </div>
-                <div class="form-group m-b-sm" ng-hide="!item.company && !item.editing">
-                  <label class="col-sm-3 control-label">Company</label>
-                  <div class="col-sm-9">
-                    <p class="form-control-static" ng-hide="item.editing">{{item.company}}</p>
-                    <input type="text" class="form-control" ng-show="item.editing" ng-model="item.company" >
-                  </div>
-                </div>
-                <div class="form-group m-b-sm" ng-hide="!item.note && !item.editing">
-                  <label class="col-sm-3 control-label">Note</label>
-                  <div class="col-sm-9">
-                    <p class="form-control-static" ng-hide="item.editing">{{item.note}}</p>
-                    <textarea class="form-control" ng-show="item.editing" ng-model="item.note" rows="5"></textarea>
-                  </div>
-                </div>
-              </div>
-              <!-- / fields -->
+                    <table ui-jq="dataTable" ui-options="{
+                        sAjaxSource: 'vendor/jquery/datatables/datatable.json',
+                        aoColumns: [
+                          { mData: 'engine' },
+                          { mData: 'browser' },
+                          { mData: 'platform' },
+                          { mData: 'version' },
+                          { mData: 'grade' }
+                        ]
+                      }" class="table table-striped m-b-none">
+                      <thead>
+                        <tr>
+                          <th  style="width:20%">Rendering engine</th>
+                          <th  style="width:25%">Browser</th>
+                          <th  style="width:25%">Platform(s)</th>
+                          <th  style="width:15%">Engine version</th>
+                          <th  style="width:15%">CSS grade</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                      </tbody>
+                    </table>
+              
             </div>
           </div>
         </div>
       </div>
+        <div class="m-t-n-xxs m-b-n-xxs m-l-xs">
+          <a class="btn btn-xs btn-default pull-right" ng-hide="!item" ng-click="deleteUser(item)"><i class="fa fa-times"></i></a>
+          <a class="btn btn-xs btn-default" ng-hide="item.editing" ng-click="addUser(item)">Add</a>
+          <a class="btn btn-xs btn-default" ng-hide="item.editing" ng-click="editUser(item)">Edit</a>
+          <a class="btn btn-xs btn-default" ng-show="item.editing" ng-click="doneEditing(item)">Done</a>
+        </div>
     </div>
   </div>
   <!-- /column -->
