--- a/views/modal.form.html
+++ b/views/modal.form.html
@@ -1,4 +1,5 @@
 <div class="modal-body wrapper-lg">
+<div class="modal-body wrapper-lg">
   <div class="row">
     <div class="col-sm-6 b-r">
       <h3 class="m-t-none m-b font-thin">Sign in</h3>
