--- a/views/page_signin.html
+++ b/views/page_signin.html
@@ -1,16 +1,13 @@
 <div class="container w-xxl w-auto-xs" ng-controller="SigninFormController" ng-init="app.settings.container = false;">
   <a href class="navbar-brand block m-t">{{app.name}}</a>
   <div class="m-b-lg">
-    <div class="wrapper text-center">
-      <strong>Sign in to get in touch</strong>
-    </div>
     <form name="form" class="form-validation">
       <div class="text-danger wrapper text-center" ng-show="authError">
           {{authError}}
       </div>
       <div class="list-group list-group-sm">
         <div class="list-group-item">
-          <input type="email" placeholder="Email" class="form-control no-border" ng-model="user.email" required>
+          <input type="text" placeholder="Name" class="form-control no-border" ng-model="user.name" required>
         </div>
         <div class="list-group-item">
            <input type="password" placeholder="Password" class="form-control no-border" ng-model="user.password" required>
