--- a/views/page_signup.html
+++ b/views/page_signup.html
@@ -1,9 +1,6 @@
     <div class="container w-xxl w-auto-xs" ng-controller="SignupFormController" ng-init="app.settings.container = false;">
       <a href class="navbar-brand block m-t">{{app.name}}</a>
       <div class="m-b-lg">
-        <div class="wrapper text-center">
-          <strong>Sign up to find interesting thing</strong>
-        </div>
         <form name="form" class="form-validation">
           <div class="text-danger wrapper text-center" ng-show="authError">
               {{authError}}
@@ -13,16 +10,11 @@
               <input placeholder="Name" class="form-control no-border" ng-model="user.name" required>
             </div>
             <div class="list-group-item">
-              <input type="email" placeholder="Email" class="form-control no-border" ng-model="user.email" required>
-            </div>
-            <div class="list-group-item">
                <input type="password" placeholder="Password" class="form-control no-border" ng-model="user.password" required>
             </div>
-          </div>
-          <div class="checkbox m-b-md m-t-none">
-            <label class="i-checks">
-              <input type="checkbox" ng-model="agree" required><i></i> Agree the <a href>terms and policy</a>
-            </label>
+            <div class="list-group-item">
+               <input type="password" placeholder="Password again" class="form-control no-border" ng-model="user.password1" required>
+            </div>
           </div>
           <button type="submit" class="btn btn-lg btn-primary btn-block" ng-click="signup()" ng-disabled='form.$invalid'>Sign up</button>
           <div class="line line-dashed"></div>
