--- a/views/blocks/nav.html
+++ b/views/blocks/nav.html
@@ -382,6 +382,18 @@
       <span translate="aside.nav.your_stuff.DOCUMENTS">Documents</span>
     </a>
   </li>
+  <li class="line dk hidden-folded"></li>
+  <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">          
+    <span translate="aside.nav.docker_nav.dockermgr_TITLE">Docker Management</span>
+  </li>  
+  <li>
+    <a ui-sref="docker.dashboard">
+      <i class="icon-user icon"></i>
+      <span translate="aside.nav.docker_nav.dashboard">Dashboard</span>
+    </a>
+  </li>
+
+  <li class="line dk hidden-folded"></li>
 
   <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">          
     <span translate="aside.nav.manager_nav.Manager_TITLE">Manager</span>
