--- a/views/blocks/nav.html
+++ b/views/blocks/nav.html
@@ -403,6 +403,10 @@
       <i class="icon-user icon"></i>
       <span translate="aside.nav.manager_nav.USER">Users</span>
     </a>
+    <a ui-sref="management.idcs">
+      <i class="icon-user icon"></i>
+      <span translate="aside.nav.manager_nav.IDCS">IDCs</span>
+    </a>
   </li>
 </ul>
 
