--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/simple-line-icons.css" type="text/css" />
   <link rel="stylesheet" href="css/font.css" type="text/css" />
   <link rel="stylesheet" href="css/app.css" type="text/css" />
+  <link rel="stylesheet" href="vendor/modules/angularjs-toaster/toaster.css" type="text/css" />
 </head>
 <body ng-controller="AppCtrl">
   <div class="app" id="app" ng-class="{'app-header-fixed':app.settings.headerFixed, 'app-aside-fixed':app.settings.asideFixed, 'app-aside-folded':app.settings.asideFolded, 'app-aside-dock':app.settings.asideDock, 'container':app.settings.container}" ui-view></div>
@@ -40,7 +41,8 @@
   <script src="vendor/angular/angular-translate/loader-static-files.js"></script>
   <script src="vendor/angular/angular-translate/storage-cookie.js"></script>
   <script src="vendor/angular/angular-translate/storage-local.js"></script>
-
+  <script src="vendor/modules/angularjs-toaster/toaster.js"></script>
+  
   <!-- App -->
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
@@ -49,6 +51,7 @@
   <script src="js/main.js"></script>
   <script src="js/services/ui-load.js"></script>
   <script src="js/services/auth-service.js"></script>
+  <script src="js/services/httpinterceptor.js"></script>
   <script src="js/filters/fromNow.js"></script>
   <script src="js/directives/setnganimate.js"></script>
   <script src="js/directives/ui-butterbar.js"></script>
