--- a/views/management_users.html
+++ b/views/management_users.html
@@ -58,7 +58,7 @@
 
 
   <!-- column -->
-  <div class="col bg-white-only" ng-show="subfilter.length">
+  <div class="col bg-white-only">
     <div class="vbox">
       <div class="wrapper-sm b-b">
             <div class="m-t-n-xxs m-b-n-xxs m-l-xs">
