--- a/views/management_idcs.html
+++ b/views/management_idcs.html
@@ -9,6 +9,11 @@
   <script type="text/ng-template" id="addIDCModalContent.html">
     <div ng-include="'tpl/add_idc_modal.html'"></div>
   </script>
+
+  <script type="text/ng-template" id="addCidrModalContent.html">
+    <div ng-include="'tpl/add_cidr_modal.html'"></div>
+  </script>
+
   <!-- column -->
   <div class="col w b-r">
     <div class="vbox">
@@ -16,9 +21,8 @@
         <div class="cell scrollable hover">
           <div class="cell-inner">
             <div class="list-group no-radius no-border no-bg m-b-none">
-              <a class="list-group-item b-b" ng-class="{'focus': (filter == '')}>ALL IDCS</a>
-              <a ng-repeat="item in groups" class="list-group-item m-l hover-anchor b-a no-select" ng-class="{'focus m-l-none': item.selected}" ng-click="selectIDC(item)">
-                <span class="block m-l-n" ng-class="{'m-n': item.selected }">{{ item.name}}</span>
+              <a ng-repeat="item in idcs|orderBy:'name'" class="list-group-item m-l hover-anchor b-a no-select" ng-class="{'focus m-l-none': item.selected}" ng-click="selectIDC(item)">
+                <span class="block m-l-n" ng-class="{'m-n': item.selected }">{{ item.IdcName}}</span>
               </a>
             </div>
           </div>
@@ -35,68 +39,113 @@
   <!-- column -->
   <div class="col bg-white-only">
     <div class="vbox">
-      <div class="wrapper-sm b-b">
-        <div class="m-t-n-xxs m-b-n-xxs m-l-xs">
-          <a class="btn btn-xs btn-default pull-right" ng-hide="!item" ng-click="deleteItem(item)"><i class="fa fa-times"></i></a>
-          <a class="btn btn-xs btn-default" ng-hide="item.editing" ng-click="editItem(item)">Edit</a>
-          <a class="btn btn-xs btn-default" ng-show="item.editing" ng-click="doneEditing(item)">Done</a>
-        </div>
-      </div>
       <div class="row-row">
         <div class="cell">
           <div class="cell-inner">
             <div class="wrapper-lg">
-              <div class="hbox h-auto m-b-lg">
-                <div class="col text-center w-sm">
-                  <div class="thumb-lg avatar inline">
-                    <img ng-src="{{item.avatar}}" ng-show="item.avatar">
-                  </div>
-                </div>
-                <div class="col v-middle h1 font-thin">
-                  <div ng-hide="item.editing">{{item.first}} {{item.last}}</div>
-                  <div ng-show="item.editing">
-                    <input type="text" placeholder="First" class="form-control w-auto input-lg m-b-n-xxs font-bold" ng-model="item.first" >
-                    <input type="text" placeholder="Last" class="form-control w-auto input-lg font-bold" ng-model="item.last" >
-                  </div>
-                </div>
-              </div>
               <!-- fields -->
               <div class="form-horizontal">
-                <div class="form-group m-b-sm" ng-hide="!item.mobile && !item.editing">
-                  <label class="col-sm-3 control-label">Mobile</label>
-                  <div class="col-sm-9">
-                    <p class="form-control-static" ng-hide="item.editing">{{item.mobile}}</p>
-                    <input type="text" class="form-control" ng-show="item.editing" ng-model="item.mobile" >
+                  <div class="panel panel-default ">
+                    <div class=panel-heading>
+                      <strong>MgrConf Base</strong>
+                    </div>
+                    <div class="panel-body">
+                        <div class="form-group">
+                          <label>IdcName</label>
+                          <input type="text" class="form-control"  placeholder="" ng-model="selectedidc.IdcName" required>
+                        </div>
+                        <div class="form-group">
+                          <label>IdcCode</label>
+                          <input type="text" class="form-control"  placeholder="" ng-model="selectedidc.IdcCode" required>
+                        </div>
+                    </div>
+                    <footer class="panel-footer text-right bg-light lter">
+                      <button type="submit" class="btn btn-success">Submit</button>
+                    </footer>
                   </div>
                 </div>
-                <div class="form-group m-b-sm" ng-hide="!item.home && !item.editing">
-                  <label class="col-sm-3 control-label">Home</label>
-                  <div class="col-sm-9">
-                    <p class="form-control-static" ng-hide="item.editing">{{item.home}}</p>
-                    <input type="text" class="form-control" ng-show="item.editing" ng-model="item.home" >
+                  <div class="panel panel-default ">
+                    <div class=panel-heading>
+                      <strong>MarathonConf</strong>
+                    </div>
+                    <div class="panel-body">                    
+                        <div class="form-group">
+                            <label>Marathon Server</label>
+                            <input type="text" class="form-control"  placeholder="http://127.0.0.1:8080" ng-model="selectedidc.MgrConf.MarathonSerConf.Server" required >
+                        </div>
+                        <div class="form-group">
+                          <label>Marathon User</label>
+                          <input type="text" class="form-control"   placeholder="Enter Marathon User" ng-model="selectedidc.MgrConf.MarathonSerConf.HttpBasicAuthUser" required >
+                        </div>
+                        
+                        <div class="form-group">
+                          <label>Marathon Password</label>
+                          <input type="text" class="form-control"  placeholder="" ng-model="selectedidc.MgrConf.MarathonSerConf.HttpBasicPassword" required>
+                        </div>
+                        <div class="form-group">
+                          <label>Marathon Template</label>
+                          <textarea class="form-control" rows="6" placeholder="Type your message" ng-model="selectedidc.MgrConf.MarathonConfTemplate"></textarea>
+                        </div>
+                    </div>
+                    <footer class="panel-footer text-right bg-light lter">
+                      <button type="submit" class="btn btn-success">Submit</button>
+                    </footer>
                   </div>
-                </div>
-                <div class="form-group m-b-sm" ng-hide="!item.work && !item.editing">
-                  <label class="col-sm-3 control-label">Work</label>
-                  <div class="col-sm-9">
-                    <p class="form-control-static" ng-hide="item.editing">{{item.work}}</p>
-                    <input type="text" class="form-control" ng-show="item.editing" ng-model="item.work" >
+                   <div class="panel panel-default">
+                    <div class=panel-heading>
+                      <strong>RegistryConf</strong>
+                    </div>
+                    <div class="panel-body">                    
+                        <div class="form-group">
+                            <label>Registry Server</label>
+                            <input type="text" class="form-control" placeholder="http://127.0.0.1:8080" ng-model="selectedidc.MgrConf.RegistryConf.Server" required >
+                        </div>
+                        <div class="form-group">
+                          <label>Registry User</label>
+                          <input type="text" class="form-control" placeholder="Enter Registry User" ng-model="selectedidc.MgrConf.RegistryConf.UserName" required >
+                        </div>
+                        
+                        <div class="form-group">
+                          <label>Registry Password</label>
+                          <input type="text" class="form-control" placeholder="" ng-model="selectedidc.MgrConf.RegistryConf.Password" required>
+                        </div>
+                    </div>
+                    <footer class="panel-footer text-right bg-light lter">
+                      <button type="submit" class="btn btn-success">Submit</button>
+                    </footer>
                   </div>
-                </div>
-                <div class="form-group m-b-sm" ng-hide="!item.company && !item.editing">
-                  <label class="col-sm-3 control-label">Company</label>
-                  <div class="col-sm-9">
-                    <p class="form-control-static" ng-hide="item.editing">{{item.company}}</p>
-                    <input type="text" class="form-control" ng-show="item.editing" ng-model="item.company" >
+                   <div class="panel panel-default">
+                    <div class=panel-heading>
+                      <strong>Cidrs</strong>
+                    </div>
+                    <div class="row wrapper">
+                      <div class="col-sm-3">
+                        <div class="input-group">
+                          <span class="input-group-btn">
+                            <button class="btn btn-sm btn-default" type="button" ng-click="createCidr()">New</button>
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="table-responsive">
+                          <table class="table table-striped b-t b-light">
+                            <thead>
+                              <tr>
+                                <th>NetAddr</th>
+                                <th>StartIP</th>
+                                <th>EndIP</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr ng-repeat="cidr in selectedidc.Cidrs">
+                                <td>{{cidr.Net}}</td>
+                                <td>{{cidr.StartIp}}</td>
+                                <td>{{cidr.EndIp}}</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                    </div>
                   </div>
-                </div>
-                <div class="form-group m-b-sm" ng-hide="!item.note && !item.editing">
-                  <label class="col-sm-3 control-label">Note</label>
-                  <div class="col-sm-9">
-                    <p class="form-control-static" ng-hide="item.editing">{{item.note}}</p>
-                    <textarea class="form-control" ng-show="item.editing" ng-model="item.note" rows="5"></textarea>
-                  </div>
-                </div>
               </div>
               <!-- / fields -->
             </div>
