--- a/views/add_cidr_modal.html
+++ b/views/add_cidr_modal.html
@@ -2,20 +2,23 @@
   <div class="row">
       <p>New Cidr</p>
       <form role="form">
-        <div class="form-group">
+        <div class="form-group" class="form-validation">
+          <div class="text-danger wrapper text-center" ng-show="formError">
+            {{formError}}
+          </div>
           <label>Net</label>
-          <input type="text" class="form-control" ng-model="newCidr.Net"  placeholder="Enter netstring">
+          <input type="text" class="form-control" ng-model="newCidr.Net"  placeholder="Enter netstring" required>
         </div>
         <div class="form-group">
           <label>StartIP</label>
-          <input type="text" class="form-control" ng-model="newCidr.StartIP" placeholder="Enter StartIP">
+          <input type="text" class="form-control" ng-model="newCidr.StartIP" placeholder="Enter StartIP" required>
         </div>
         <div class="form-group">
           <label>EndIP</label>
-          <input type="text" class="form-control" ng-model="newCidr.EndIP" placeholder="Enter EndIP">
+          <input type="text" class="form-control" ng-model="newCidr.EndIP" placeholder="Enter EndIP" required>
         </div>
         <div class="checkbox m-t-lg">
-          <button type="submit" class="btn btn-sm btn-success pull-right text-uc m-t-n-xs" ng-click="ok()"><strong>commit</strong></button>
+          <button type="submit" class="btn btn-sm btn-success pull-right text-uc m-t-n-xs" ng-click="ok()" ng-disabled='form.$invalid'><strong>commit</strong></button>
           <button class="btn btn-sm btn-success pull-right text-uc m-t-n-xs" ng-click="cancel()"><strong>cancel</strong></button>
         </div>
       </form>
