--- a/views/management_idcs.html
+++ b/views/management_idcs.html
@@ -71,24 +71,24 @@
                     <div class="panel-body">                    
                         <div class="form-group">
                             <label>Marathon Server</label>
-                            <input type="text" class="form-control"  placeholder="http://127.0.0.1:8080" ng-model="selectedidc.MgrConf.MarathonSerConf.Server" required >
+                            <input type="text" class="form-control"  placeholder="http://127.0.0.1:8080" ng-model="selectedidc.MarathonSerConf.Server" required >
                         </div>
                         <div class="form-group">
                           <label>Marathon User</label>
-                          <input type="text" class="form-control"   placeholder="Enter Marathon User" ng-model="selectedidc.MgrConf.MarathonSerConf.HttpBasicAuthUser" required >
+                          <input type="text" class="form-control"   placeholder="Enter Marathon User" ng-model="selectedidc.MarathonSerConf.HttpBasicAuthUser" required >
                         </div>
                         
                         <div class="form-group">
                           <label>Marathon Password</label>
-                          <input type="text" class="form-control"  placeholder="" ng-model="selectedidc.MgrConf.MarathonSerConf.HttpBasicPassword" required>
+                          <input type="text" class="form-control"  placeholder="" ng-model="selectedidc.MarathonSerConf.HttpBasicPassword" required>
                         </div>
                         <div class="form-group">
                           <label>Marathon Template</label>
-                          <textarea class="form-control" rows="6" placeholder="Type your message" ng-model="selectedidc.MgrConf.MarathonConfTemplate"></textarea>
+                          <textarea class="form-control" rows="20" placeholder="Type your message" ng-model="selectedidc.MarathonSerConf.MarathonConfTemplate"></textarea>
                         </div>
                     </div>
                     <footer class="panel-footer text-right bg-light lter">
-                      <button type="submit" class="btn btn-success">Submit</button>
+                      <button type="submit" class="btn btn-success" ng-click="commitMarathonConf()">Submit</button>
                     </footer>
                   </div>
                    <div class="panel panel-default">
@@ -98,20 +98,20 @@
                     <div class="panel-body">                    
                         <div class="form-group">
                             <label>Registry Server</label>
-                            <input type="text" class="form-control" placeholder="http://127.0.0.1:8080" ng-model="selectedidc.MgrConf.RegistryConf.Server" required >
+                            <input type="text" class="form-control" placeholder="http://127.0.0.1:8080" ng-model="selectedidc.RegistryConf.Server" required >
                         </div>
                         <div class="form-group">
                           <label>Registry User</label>
-                          <input type="text" class="form-control" placeholder="Enter Registry User" ng-model="selectedidc.MgrConf.RegistryConf.UserName" required >
+                          <input type="text" class="form-control" placeholder="Enter Registry User" ng-model="selectedidc.RegistryConf.UserName" required >
                         </div>
                         
                         <div class="form-group">
                           <label>Registry Password</label>
-                          <input type="text" class="form-control" placeholder="" ng-model="selectedidc.MgrConf.RegistryConf.Password" required>
+                          <input type="text" class="form-control" placeholder="" ng-model="selectedidc.RegistryConf.Password" required>
                         </div>
                     </div>
                     <footer class="panel-footer text-right bg-light lter">
-                      <button type="submit" class="btn btn-success">Submit</button>
+                      <button type="submit" class="btn btn-success" ng-click="commitRegistryConf()">Submit</button>
                     </footer>
                   </div>
                    <div class="panel panel-default">
