--- a/views/management_users.html
+++ b/views/management_users.html
@@ -26,6 +26,9 @@
           </div>
         </div>
       </div>
+      <div class="wrapper b-t">
+        <a href class="btn btn-sm btn-default" ng-click="createService()"><i class="fa fa-plus fa-fw m-r-xs"></i> New Service</a>
+      </div>
     </div>
   </div>
   <!-- /column -->
@@ -49,6 +52,9 @@
             <div class="text-center pos-abt w-full" style="top:50%;" ng-hide="(subbuses | filter:{mainbus:mainfilter}).length" translate="content.management.no_subbus">No SubBus</div>
           </div>
         </div>
+      </div>
+      <div class="wrapper b-t">
+        <a href class="btn btn-sm btn-default" ng-click="createService()"><i class="fa fa-plus fa-fw m-r-xs"></i> New Service</a>
       </div>
     </div>
   </div>
