--- a/views/management_users.html
+++ b/views/management_users.html
@@ -11,45 +11,27 @@
     <div ng-include="'tpl/add_user_modal.html'"></div>
   </script>
 
-    <!-- column -->
-  <div class="col w b-r" ng-hide="mainfilter.length">
-    <div class="vbox">
-      <div class="row-row">
-        <div class="cell scrollable hover">
-          <div class="cell-inner">
-            <div class="list-group no-radius no-border no-bg m-b-none">
-              <a ng-repeat="item in mainbuses|orderBy:'name'"  class="list-group-item m-l hover-anchor b-a no-select" ng-class="{'focus m-l-none': item.selected}" ng-click="selectMainBus(item)">
-                <span class="block m-l-n" ng-class="{'m-n': item.selected }">{{ item.name ? item.name : 'Untitled' }}</span>
-              </a>
-            </div>
-            <div class="text-center pos-abt w-full" style="top:50%;" ng-hide="mainbuses.length" translate="content.management.no_mainbus">No MainBuses</div>
-          </div>
-        </div>
-      </div>
-      <div class="wrapper b-t">
-        <a href class="btn btn-sm btn-default" ng-click="createService()"><i class="fa fa-plus fa-fw m-r-xs"></i> New Service</a>
-      </div>
-    </div>
-  </div>
-  <!-- /column -->
- 
+  <script type="text/ng-template" id="addServiceModalContent.html">
+    <div ng-include="'tpl/add_service_modal.html'"></div>
+  </script>
+
   <!-- column -->
-  <div class="col w b-r" ng-show="mainfilter.length">
+  <div class="col w b-r" ng-repeat="idx in count" ng-show="isShow(idx)">
     <div class="vbox">
-      <div class="wrapper-sm b-b">
+      <div class="wrapper-sm b-b ng-show="idx>0">
         <div class="m-t-n-xxs m-b-n-xxs m-l-xs">
-          <a class="btn btn-xs btn-default" ng-hide="item.editing" ng-click="returnMain()">返回</a>
+          <a class="btn btn-xs btn-default" ng-click="returnUpper()">返回</a>
         </div>
       </div>
       <div class="row-row">
         <div class="cell scrollable hover">
           <div class="cell-inner">
             <div class="list-group no-radius no-border no-bg m-b-none">
-              <a ng-repeat="item in subbuses| filter:{mainbus:mainfilter}| orderBy:'name'" class="list-group-item m-l hover-anchor b-a no-select" ng-class="{'focus m-l-none': item.selected}" ng-click="selectSubBus(item)">
+              <a ng-repeat="item in subbuses| filter:{mainbus:mainfilter}| orderBy:'name'" class="list-group-item m-l hover-anchor b-a no-select" ng-class="{'focus m-l-none': item.selected}" ng-click="selectService(item)">
                 <span class="block m-l-n" ng-class="{'m-n': item.selected }">{{ item.name ? item.name : 'Untitled' }}</span>
               </a>
             </div>
-            <div class="text-center pos-abt w-full" style="top:50%;" ng-hide="(subbuses | filter:{mainbus:mainfilter}).length" translate="content.management.no_subbus">No SubBus</div>
+            <div class="text-center pos-abt w-full" style="top:50%;" ng-hide="(subbuses | filter:{mainbus:mainfilter}).length" translate="content.management.no_subbus">No Service found</div>
           </div>
         </div>
       </div>
