--- a/views/add_idc_modal.html
+++ b/views/add_idc_modal.html
@@ -2,7 +2,7 @@
   <div class="row">
       <p>New IDC</p>
       <form role="form">
-        <div class="form-group" class="form-validation">
+        <div class="form-group form-validation">
         <div class="text-danger wrapper text-center" ng-show="formError">
           {{formError}}
         </div>
