--- a/views/blocks/nav.html
+++ b/views/blocks/nav.html
@@ -407,6 +407,10 @@
       <i class="icon-user icon"></i>
       <span translate="aside.nav.manager_nav.IDCS">IDCs</span>
     </a>
+    <a ui-sref="management.services">
+      <i class="icon-user icon"></i>
+      <span translate="aside.nav.manager_nav.SERVICES">Services</span>
+    </a>
   </li>
 </ul>
 
